# src/docs/swagger.yaml
@@ -27,16 +27,93 @@ paths:
                 password:
                   type: string
 
-                role:
-                  type: string
-                  enum:
-                    - ADMIN
-                    - PATIENT
-                    - DOCTOR
-
       responses:
         "200":
           description: Login Successful
 
         "401":
           description: Invalid Credentials
+
+
+  /admin/patients:
+    post:
+      summary: Create a new patient
+      description: Creates a patient. Only admins can access this endpoint.
+      tags:
+        - Admin
+
+      security:
+        - bearerAuth: []
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - firstName
+                - lastName
+                - email
+                - password
+                - dob
+                - height
+                - weight
+                - bloodGroup
+              properties:
+                firstName:
+                  type: string
+                  example: John
+
+                lastName:
+                  type: string
+                  example: Doe
+
+                email:
+                  type: string
+                  format: email
+                  example: john@example.com
+
+                password:
+                  type: string
+                  example: password123
+
+                dob:
+                  type: string
+                  format: date
+                  example: "2000-05-15"
+
+                height:
+                  type: integer
+                  example: 175
+
+                weight:
+                  type: integer
+                  example: 70
+
+                bloodGroup:
+                  type: string
+                  example: O+
+
+      responses:
+        "201":
+          description: Patient created successfully
+
+        "400":
+          description: Invalid request body
+
+        "401":
+          description: Unauthorized
+
+        "403":
+          description: Forbidden
+
+        "409":
+          description: Patient already exists
+
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
