# src/routes/admin.routes.ts
@@ -1,0 +1,15 @@
+import { Router } from "express";
+import { authenticate } from "../middleware/auth.middleware";
+import { authorize } from "../middleware/authorize.middleware";
+import { createPatient } from "../controllers/admin.controller";
+
+const router = Router();
+
+router.post(
+  "/patients",
+  authenticate,
+  authorize("ADMIN"),
+  createPatient
+);
+
+export default router;
